tools/tests/errors/surf_type_04.experr
complex numbers are not ordered
